[tool.poetry]
name = "common"
version = "0.0.1"
description = "A common library for the project."
authors = ["dalcon <dalcon10280@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.11"
aiohttp = "^3.10.3"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest-env = "^1.1.3"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
ENV = "test"
