[tool.poetry]
name = "common"
version = "0.0.1"
description = "A common library for the project."
authors = ["dalcon <dalcon10280@gmail.com>"]
readme = "README.md"
packages = [
    { include = "common" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.3"
pydantic-settings = "^2.4.0"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.34"
databases = "^0.9.0"
uvicorn = "^0.31.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest-env = "^1.1.3"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"
setuptools = "^73.0.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
ENV = "test"
